# deep-research

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202604010001_init.py  202604020001_add_clarify_fields.py  202604080001_add_follow_up_fields.py  202604110001_add_owner_id.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  mcp.py  providers.py  research.py
backend/app/core/: config.py  sse.py
backend/app/db/: models.py  session.py
backend/app/research/: prompts.py  providers.py  repository.py  schemas.py  service.py  streaming.py
backend/tests/: test_api.py  test_providers.py  test_service.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  server.mjs  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: WorkflowProgress.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  sse.ts
frontend/src/stores/: auth.ts  history.ts  research.ts  settings.ts
frontend/src/types/: research.ts
frontend/src/views/: HomeView.vue  ReportView.vue
frontend/tests/: setup.ts
frontend/tests/e2e/: workbench.spec.ts
frontend/tests/unit/: history.store.test.ts  research.store.test.ts
